@@ -1,0 +1,100 @@
+<!DOCTYPE html PUBLIC "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <meta name="GENERATOR" content="enotepad">
+  <title>Equinox Desktop Environment 1.0.4 Help</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<center>
+<table bgcolor="#002e78" width="100%" height="120" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="150"><center><img src="logoinvert100.png" height="99" width="100"></center></td>
+    <td><font face="sans-serif" size="7" color="#FFFFFF">Equinox Desktop Environment</font><br>
+		<font face="sans-serif" size="4" color="#FFFFFF">version @EDE_VERSION@</font>
+  </tr>
+</table>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="200" bgcolor="#6699CC" align="left" valign="top">
+      <table width="100%" border="0" cellpadding="10"><tr><td class="leftbar">
+        <b>Contents:</b><br>
+	<li>Welcome to EDE</li>
+	&nbsp;&nbsp;&nbsp; - <a href="#getting-help" class="leftbar">Getting help</a><br>
+	&nbsp;&nbsp;&nbsp; - <a href="#get-ede" class="leftbar">Get EDE!</a><br>
+	<li><a href="changelog.html" class="leftbar">What's new</a></li>
+	<li><a href="authors.html" class="leftbar">Credits</a></li>
+	<li><a href="copying.html" class="leftbar">Copyright</a></li>
+	<li><a href="help.html" class="leftbar">Help wanted!</a></li>
+      </td></tr></table>
+    </td>
+    <td width="5">&nbsp;</td>
+    <td bgcolor="#FFFFFF" align="left" valign="top">
+      <p>&nbsp;</p>
+      <center>
+      <font face="sans-serif" size="6"><b>Welcome to</b></font><br>
+        <img src="ede-small.gif" height="104" width="113">
+      </center>
+      <font face="sans-serif">
+Equinox Desktop Environment is a small and powerfull graphical environment for X Window System. It is built on eFLTK (extended FLTK), heavily
+modified FLTK 2.0 library. Comparing to other desktop environments, Equinox is very fast (even on slow machines)
+and has a low memory footprint. EDE is not just a window manager! It provides things like multiple desktops, nice workpanel, wallpapers, theming support, icons, front end for your usual tasks. Also
+there is Xft (font anti-aliasing) support and various GUI effects.<br>
+<br>
+Components of the EDE package are:<br>
+- edewm: a ICCCM-compliant window manager<br>
+- eiconman: the "desktop"<br>
+- eworkpanel: containing taskbar, main menu, clock and many other applets<br>
+- econtrol: a desktop control panel with several useful applets<br>
+- einstaller: program (package) installer<br>
+- efinder: file search program<br>
+- emenueditor, etimedate etc.<br>
+Other programs for EDE are under development, such as file manager, multimedia, internet tools, games etc.<br><br>
+Tune in to EDE, because it is becoming better every day.<br>
+<br>
+<a name="getting-help">
+<h1>Getting help</h1>
+If you require further assistance, we advise you to visit:<br>
+- <a href="http://ede.sourceforge.net" target="_new">The EDE Homepage</a><br>
+- <a href="http://sourceforge.net/project/ede/" target="_new">EDE project page at SourceForge.net</a><br>
+<br>
+The latter web site also contains forums, bug report tool and mailing lists.
+
+<br>
+<a name="get-ede">
+<h1>Get EDE!</h1>
+<img src="getede.png" width="100" height="46" align="left" border="1"> EDE is improved daily! So if you have problems, it is very possible that they are already fixed. To get the latest EDE version, <a href="http://ede.sourceforge.net" target="_new">visit our homepage</a>.<br>
+<br>
+You can get EDE from:<br>
+- <i>distribution-agnostic binary packages (RPM)</i> - it should be possible to install these packages on any distribution produced since January 1st, 2001.; on non-RPM distributions you can install the rpm software or use a tool called "alien"<br>
+- <i>distribution-specific binary packages</i> - contain optimizations for a specific Linux distribution<br>
+- <i>source code packages (tar.gz)</i> - you should be able to compile them on any *nix system, including FreeBSD and Solaris; just unpack and use commands <b>./configure; make; make install</b><br>
+- <i>anonymous CVS access</i> - use the following commands to download the latest development version of EDE from our CVS server:<br>
+<ul><code>cvs -z3 -d :pserver:anonymous@cvs.sourceforge.net:/cvsroot/ede login<br>
+Password: <b>&lt;just press enter&gt;</b><br>
+cvs -z3 -d :pserver:anonymous@cvs.sourceforge.net:/cvsroot/ede co efltk<br>
+cvs -z3 -d :pserver:anonymous@cvs.sourceforge.net:/cvsroot/ede co ede</code></ul>
+After these commands compile first efltk then ede. Use "autoconf" to produce the configure script, then proceed as usual.<br>
+<br>
+When you are updating EDE be sure to use the matching version of eFLTK! eFLTK is developing together with EDE, also many bugs are really caused by eFLTK problems, so it is critical that you update eFLTK together with EDE or you might have errors and other problems.<br><br>
+
+
+<ul><b>Find out more about:</b></ul>
+<ul><li><a href="changelog.html">Changes from previous versions</a></li>
+<li><a href="authors.html">People that made EDE possible</a></li>
+<li><a href="copying.html">Licencing and copyright information</a></li>
+<li><a href="help.html">Help us make EDE better!</a></li></ul>
+
+</p>
+<p>&nbsp;</p>
+<p align="right">Copyright (c) 2000-2005. <a href="authors.html">EDE Authors</a></p>
+    </font>
+
+    </td>
+    <td width="5">&nbsp;</td>
+  </tr>
+</table>
+</body>
+</html>
+
